Add cmake build - but needs cleanup

--- a/Assets/settings.json
+++ b/Assets/settings.json
@@ -1,5 +1,5 @@
 {
-    "directory": "C:/Dev/AngryJets/",
+    "directory": "/home/mzimniak/Documents/source/AngryJets/",
     "fullscreen": true,
     "fps": 30,
 	"map": ["mount_doom","garden"],
